图片列表 bug修改 新闻详情页面 文字、标题修改

--- a/html/home2.html
+++ b/html/home2.html
@@ -142,10 +142,11 @@
 	}
 </script>
 <style>
-#divxs{
+ #divxs{
 width:33%;
-line-height:3em;
-}
+margin-bottom:20px;
+margin-top:20px
+} 
 /* @media screen and (min-width: 600px) and (max-width: 1900px) {
   #imgToDo {
     width:200px;
@@ -173,8 +174,8 @@ line-height:3em;
 			<div class="ui-block-c" id="divxs" >
 				<a href="javascript:void(0);" data-bind="attr:{'onclick':target}" > <img
 					id="imgToDo" data-bind="attr:{'src':img}" class="module-icon"/>
-				</a> <br />
-				<span style="color: #434343;" style="margin-top:15px;"><strong data-bind="text:name"></strong></span>
+				</a><br />
+				<span style="color: #434343;"><strong data-bind="text:name"></strong></span>
 			</div>
 			</div>
 		</div>
