通知公告更改成集团通知

--- a/html/home2.html
+++ b/html/home2.html
@@ -103,7 +103,7 @@
 	//获取图标个数
 	function getTuBiao() {
 		var jsonData = [ {"id":1,"name":"集团新闻","img":"../assets/home/news.png","target":"loadJtxw()"},
-		                 {"id":2,"name":"通知公告","img":"../assets/home/tzgg.png","target":"loadNewsList('GT_HomePage_SiteArea_jttz')"},
+		                 {"id":2,"name":"集团通知","img":"../assets/home/tzgg.png","target":"loadNewsList('GT_HomePage_SiteArea_jttz')"},
 		                 {"id":3,"name":"成员单位新闻","img":"../assets/home/cydwxw.png","target":"loadNewsList('GT_HomePage_SiteArea_zgsxw')"},
 		                 {"id":4,"name":"公文代办","img":"../assets/home/task.png","target":"loadTaskList()"},
 		                 {"id":5,"name":"公文查阅","img":"../assets/home/gwcy.png","target":"loadqueryList()"},
