* 调整登录显示验证码 * 调整会签loadPage地址为viewhome开头

--- a/html/queryList.html
+++ b/html/queryList.html
@@ -285,7 +285,7 @@
 			var templatecon ="contentsign";
 			var unid = $(str).data("unid");
 			localStorage.setItem("unid",unid);
-			var loadurl= $.hori.getconfig().serverBaseUrl+"view/html/signform.html";
+			var loadurl= $.hori.getconfig().serverBaseUrl+"viewhome/html/signform.html";
 			$.hori.loadPage(loadurl);
 		}
 	</script>
