--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -35,7 +35,8 @@ a {
 <script type="text/javascript">
 
 	$(document).ready(function(){
-		//加载收入完成图表数据
+		$.hori.setHeaderTitle("收入板块");
+		//加载收入板块图表数据
 		loadSrwcChart();
 	});
 	
