--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -40,6 +40,7 @@ a {
 	<script src="../asset/js/echartsExample.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
+		$.hori.setHeaderTitle("收入完成");
 		//加载收入完成图表数据
 		loadSrwcChart();
 	});
