--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -39,10 +39,11 @@ a {
 
 	<script type="text/javascript">
 		$(document).ready(function() {
-			//加载收入完成图表数据
+			$.hori.setHeaderTitle("收入利润");
+			//加载收入利润图表数据
 			loadSrlrqsChart()
 		});
-		//加载收入完成图表数据
+		//加载收入利润图表数据
 		function loadSrlrqsChart() {
 			var url = $.hori.getconfig().appServerHost
 					+ "view/bi/loadSrlrqsChart/accsyBiReport/services/reqBiReportData";
