bi图表根据分辨率不同 适配

--- a/html/bi/fxzk.html
+++ b/html/bi/fxzk.html
@@ -36,6 +36,7 @@ a {
 </style>
 <script type="text/javascript">
 	$(document).ready(function() {
+		$.hori.setHeaderTitle("风险状况");
 		//加载收入完成图表数据
 		loadSrwcChart();
 	});
@@ -66,18 +67,40 @@ a {
 						var month = json.reportdata.month;
 						var monthdata = json.reportdata.monthData.split('|');
 
+						var cWidth=window.screen.width;
+						var monthWidth;
+						var imgStringLiWidth;
+						var imgStringWidth;
+						var imgStringDivWidth;
+						var imgwidth;
+						var tbImgWidth;//小图标宽度
+						if(cWidth<720){
+							monthWidth="5.5%";
+							imgStringLiWidth="45px";
+							imgStringDivWidth="50px";
+							imgStringWidth="55px";
+							imgwidth="40px";
+							tbImgWidth="5.4%";
+						}else{
+							monthWidth="6%";
+							imgStringLiWidth="60px";
+							imgStringDivWidth="50px";
+							imgStringWidth="60px";
+							imgwidth="50px";
+							tbImgWidth="6%";
+						}
 						var busiData = json.reportdata.busiData;
 						var imgString = "<div class='top_year'>"
 								+ year
-								+ "</div><ul style='padding:10px;list-style:none;'><li><div style='float:left;width:60px;'>&nbsp;</div><div style='float:left;width:50px;'>&nbsp;</div>";
+								+ "</div><ul style='padding:10px;list-style:none;'><li><div style='float:left;width:"+imgStringLiWidth+";'>&nbsp;</div><div style='float:left;width:"+imgStringDivWidth+";'>&nbsp;</div>";
 						for (var z = 0; z < monthdata.length; z++) {
 							if (monthdata[z].indexOf("1月") != -1 && monthdata[z].length == 2) { //包含1月，添加id处理
 								imgString = imgString
-										+ "<div id='targetMonth' style='float:left;width:6%;'>"
+										+ "<div id='targetMonth' style='float:left;width:"+monthWidth+";'>"
 										+ monthdata[z] + "</div>";
 							} else {
 								imgString = imgString
-										+ "<div style='float:left;width:6%;'>"
+										+ "<div style='float:left;width:"+monthWidth+";'>"
 										+ monthdata[z] + "</div>";
 							}
 						}
@@ -86,29 +109,29 @@ a {
 							var busiName = busiData[i].busiName;
 							if (30 == busiData[i].now) {
 								imgString = imgString
-										+ "<li style='line-height:50px;'><div style='float:left;clear:both;width:60px;'><font size='2'>"
+										+ "<li style='line-height:50px;'><div style='float:left;clear:both;width:"+imgStringWidth+";'><font size='2'>"
 										+ busiName
-										+ "</font></div><div style='float:left;width:50px;'><img src='img/dahong.png'></img></div>"
+										+ "</font></div><div style='float:left;width:"+imgwidth+";'><img src='img/dahong.png'></img></div>"
 							} else {
 								imgString = imgString
-										+ "<li style='line-height:50px;'><div style='float:left;clear:both;width:60px;'><font size='2'>"
+										+ "<li style='line-height:50px;'><div style='float:left;clear:both;width:"+imgStringWidth+";'><font size='2'>"
 										+ busiName
-										+ "</div><div style='float:left;width:50px;'><img src='img/dalv.png'></img></div>"
+										+ "</div><div style='float:left;width:"+imgwidth+";'><img src='img/dalv.png'></img></div>"
 							}
 							var imageType = busiData[i].imageType.split('|');
 							for (var j = 0; j < imageType.length - 1; j++) {
 								if (10 == imageType[j]) {
 									imgString = imgString
-											+ "<div style='float:left;width:6%;line-height:60px;'><img src='img/xiaolv.png'></img></div>";
+											+ "<div style='float:left;width:"+tbImgWidth+";line-height:60px;'><img src='img/xiaolv.png'></img></div>";
 								} else if (20 == imageType[j]) {
 									imgString = imgString
-											+ "<div style='float:left;width:6%;line-height:60px;'><img src='img/xiaohuang.png'></img></div>";
+											+ "<div style='float:left;width:"+tbImgWidth+";line-height:60px;'><img src='img/xiaohuang.png'></img></div>";
 								} else if (30 == imageType[j]) {
 									imgString = imgString
-											+ "<div style='float:left;width:6%;line-height:60px;'><img src='img/xiaohong.png'></img></div>";
+											+ "<div style='float:left;width:"+tbImgWidth+";line-height:60px;'><img src='img/xiaohong.png'></img></div>";
 								} else {
 									imgString = imgString
-											+ "<div style='float:left;width:6%;line-height:60px;'><img src='img/xiaohui.png'></img></div>";
+											+ "<div style='float:left;width:"+tbImgWidth+";line-height:60px;'><img src='img/xiaohui.png'></img></div>";
 								}
 							}
 							imgString = imgString + "</li>";
