--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -27,9 +27,9 @@ a {
 <body>
 	<!-- 收入完成 -->
 	<div style="float:right;">
-	<div id="yusuan" align="left"></div>
-	<div id="leiji" align="left"></div>
-	<div id="bili" align="left"></div>
+	<div id="yusuan" align="left" style="font-size:1.3em;"></div>
+	<div id="leiji" align="left" style="font-size:1.3em;"></div>
+	<div id="bili" align="left" style="font-size:1.3em;"></div>
 	</div>
 	<div id="main" style="height: 400px">
 	
@@ -65,6 +65,8 @@ a {
                 	reportdata=json.reportdata;
                 	var seriesname=reportdata.seriesname.split('|');
                 	var seriesdata=reportdata.seriesdata.split('|');
+                	var one=seriesdata[1]/seriesdata[0]-0.1;
+                	var two=seriesdata[2]/100+0.1;
                 	var srwc=seriesdata[1];
                 	var b=seriesname[0]+":"+seriesdata[0]+reportdata.primaryunit;
                 	document.getElementById("yusuan").innerHTML=b;
@@ -72,8 +74,8 @@ a {
                 	document.getElementById("leiji").innerHTML=c;
                 	var d=seriesname[2]+":"+seriesdata[2]+"%";
                 	document.getElementById("bili").innerHTML=d;
-                	var ww=(Math.ceil((seriesdata[1])/100))*100;
-                	draw(ww,srwc);
+                	var ww=(Math.ceil((seriesdata[0])/100))*100;
+                	draw(ww,srwc,0.6,0.7);
                 },
                 "error":function(res){
                     alert("error:" + res);
@@ -81,7 +83,7 @@ a {
                 }
             });
     }
-	function draw(ww,srwc){
+	function draw(ww,srwc,colorOne,colorTwo){
 		var option = {
 				toolbox : {
 					show : false,
@@ -107,16 +109,16 @@ a {
 					max:ww,
 					axisLine : { // 坐标轴线
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : [ [ 0.2, '#01a149' ], [ 0.8, '#01a149' ],
-									[ 1, '#01a149' ] ],
+							color : [ [ colorOne, '#FFD700' ], [ colorTwo, '#7CFC00' ],
+									[ 1, '#A066D3' ] ],
 							width : 50
 						}
 					},
 					axisTick : { // 坐标轴小标记
 						splitNumber : 10, // 每份split细分多少段
-						length : 10, // 属性length控制线长
+						length : 4, // 属性length控制线长
 						lineStyle : { // 属性lineStyle控制线条样式
-							color : '#1ad4d1'
+							color : '#292421'
 						}
 					},
 					axisLabel : { // 坐标轴文本标签，详见axis.axisLabel
